// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TRB Admin InformationCard > Renders correct Initial request form info 1`] = `
<DocumentFragment>
  <li
    class="usa-card flex-1 information-card margin-bottom-2"
    data-testid="Card"
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
        data-testid="CardHeader"
      >
        <h3
          class="margin-0"
        >
          Initial request form
        </h3>
        <p
          class="text-base margin-0"
        >
          Completed by requester
        </p>
      </div>
      <div
        class="usa-card__body"
        data-testid="CardBody"
      >
        <div
          class="display-flex flex-align-center line-height-body-5 margin-bottom-2"
        >
          <span
            class="easi-tag easi-task-status-tag bg-success-dark text-white"
            data-testid="task-list-task-tag"
            style="white-space: nowrap;"
          >
            Completed
          </span>
        </div>
        <dt
          class="text-bold"
        >
          Last updated
        </dt>
        <dd
          class="margin-left-0 margin-bottom-1"
        >
          January 5, 2023
        </dd>
      </div>
      <div
        class="usa-card__footer"
        data-testid="CardFooter"
      >
        <button
          class="usa-button usa-button--outline"
          data-testid="button"
          type="button"
        >
          View
        </button>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`TRB Admin InformationCard > Renders correct guidance letter info 1`] = `
<DocumentFragment>
  <li
    class="usa-card flex-1 information-card margin-bottom-2"
    data-testid="Card"
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
        data-testid="CardHeader"
      >
        <h3
          class="margin-0"
        >
          Guidance letter
        </h3>
        <p
          class="text-base margin-0"
        >
          To be completed by TRB
        </p>
      </div>
      <div
        class="usa-card__body"
        data-testid="CardBody"
      >
        <div
          class="display-flex flex-align-center line-height-body-5 margin-bottom-2"
        >
          <span
            class="easi-tag easi-task-status-tag bg-info-light"
            data-testid="task-list-task-tag"
            style="white-space: nowrap;"
          >
            Ready to start
          </span>
        </div>
        <dt
          class="text-bold"
        >
          Last updated
        </dt>
        <dd
          class="margin-left-0 margin-bottom-1"
        >
          February 5, 2023
        </dd>
      </div>
      <div
        class="usa-card__footer"
        data-testid="CardFooter"
      >
        <button
          class="usa-button"
          data-testid="button"
          type="button"
        >
          Start guidance letter
        </button>
      </div>
    </div>
  </li>
</DocumentFragment>
`;
